quicklog/tests/failures/target_wrong_specifier.rs
use quicklog::info;

fn main() {
    // only accept `target: ...`
    info!(non_target: "my_module", "Hello world");
}
